# tb

./: codebase_report.md  project.mdc  setup.py
scout/: __init__.py  actions.py  automation plan.txt  bugfixing.mdc  capturerework.txt  codebase_report.md  config.ini  config_manager.py  debug_window.py  error_handling.py  fix_templates_path.py  gui.py  instructions.mdc  main.py  memory.mdc  overlay.py  pyproject.toml  scoutrules.mdc  selector_tool.py  signals.py  sound_manager.py  template_debug.py  template_matcher.py  template_search.py  text_ocr.py  window_capture.py  window_interface.py  window_manager.py  world_scanner.py
scout/automation/: __init__.py  action_executor.py  action_handlers_advanced_flow.py  action_handlers_basic.py  action_handlers_data.py  action_handlers_flow.py  action_handlers_visual.py  actions.py  context.py  core.py  executor.py  position.py  progress_tracker.py  sequence.py
scout/automation/gui/: action_editor.py  action_params.py  automation_tab.py  debug_tab.py  debug_window.py  nested_action_editor.py  position_marker.py  sequence_builder.py
scout/config/: default_settings.json
scout/debug/: __init__.py  automation_tab.py  base.py  capture_tab.py  image_tab.py  manager.py  ocr_tab.py  preview.py
scout/docs/: architecture.md
scout/gui/: __init__.py  main_window.py  menu_bar.py  scanning_tab.py  settings_tab.py  status_bar.py
scout/screen_capture/: __init__.py  capture_manager.py  capture_tab.py  screen_list_model.py  utils.py  window_list_model.py
scout/utils/: __init__.py  file_utils.py  logging_utils.py  ui_utils.py
(+12 files in other folders)
