[project]
name = "TB_Scout"
version = "0.1.0"
description = "TB Scout"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mss>=10.0.0",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "pyqt6>=6.8.1",
    "pytesseract>=0.3.13",
    "pywin32>=308",
    "pydirectinput>=1.0.4",
]

[build-system]
requires  = ["hatchling"]
build-backend = "hatchling.build"